--- a/src/app/ticket/ticket.page.html
+++ b/src/app/ticket/ticket.page.html
@@ -1,9 +1,12 @@
 <ion-header>
   <ion-toolbar>
+      <ion-buttons slot="start" (click)="back()">
+        <ion-icon name="caret-back-outline"></ion-icon>
+      </ion-buttons>
     <ion-title>Jegyek</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-<p>tongyo vilag</p>
+  <p>tongyo vilag</p>
 </ion-content>
