--- a/src/app/sell-ticket/sell-ticket.page.html
+++ b/src/app/sell-ticket/sell-ticket.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>sell-ticket</ion-title>
+    <ion-buttons slot="start" (click)="clickOnkBackButton()">
+      <ion-icon name="caret-back-outline"></ion-icon>
+    </ion-buttons>
+    <ion-title>Jegyeladas</ion-title>
   </ion-toolbar>
 </ion-header>
 
