--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,14 +1,15 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="sell-ticket">
-      <ion-icon name="people"></ion-icon>
-      <ion-label>Contacts</ion-label>
+
+    <ion-tab-button tab="home">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="home"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="sell-ticket">
+      <ion-icon name="ticket"></ion-icon>
+      <ion-label>Jegyeladas</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
