insert animation in contact, home, and sell ticket

--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -1,13 +1,12 @@
-<ion-header [translucent]="true" id="first">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar id="first">
     <ion-buttons slot="start" (click)="clickOnkBackButton()">
       <ion-icon name="caret-back-outline"></ion-icon>
     </ion-buttons>
-    <ion-title>Kapcsolat</ion-title>
+    <ion-title>Contact</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <h2>Udv a jegybazarban</h2>
-  <p>Ez a legyjobb</p>
+<ion-content>
+
 </ion-content>
