--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,10 +12,11 @@
       <ion-label>Jegyeladas</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="contact">
+      <ion-icon name="people"></ion-icon>
+      <ion-label>Contact</ion-label>
     </ion-tab-button>
+
     <ion-tab-button tab="ticket">
       <ion-icon name="tablet-landscape"></ion-icon>
       <ion-label>ticket</ion-label>
