--- a/src/app/ticket/ticket.page.html
+++ b/src/app/ticket/ticket.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-      <ion-buttons slot="start" (click)="back()">
+      <ion-buttons slot="start" (click)="clickOnkBackButton()">
         <ion-icon name="caret-back-outline"></ion-icon>
       </ion-buttons>
     <ion-title>Jegyek</ion-title>
