--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,11 +7,11 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <ion-input type="text" placeholder="Email"></ion-input>
+      <ion-input type="text" [(ngModel)]="loginData.email" placeholder="Email"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input type="Jelszo" placeholder="Password"></ion-input>
+      <ion-input type="Jelszo" placeholder="Password" [(ngModel)]="loginData.password"></ion-input>
     </ion-item>
-      <ion-button color="primary" expand="block" size="large">Belepes</ion-button>
+      <ion-button color="primary" expand="block" size="large" (click)="login()">Belepes</ion-button>
   </ion-list>
 </ion-content>
