--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -21,6 +21,9 @@
       <ion-icon name="tablet-landscape"></ion-icon>
       <ion-label>ticket</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="event-manager">
+      <ion-icon name="tablet-landscape"></ion-icon>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
