--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,7 @@
     </ion-fab>
 
   <ion-card *ngFor="let eventCard of eventList">
-    <img [src]= 'eventCard.pictureURL' />
+    <ion-img [src]= 'eventCard.pictureURL'></ion-img>
     <ion-card-header>
       <ion-card-subtitle>{{eventCard.description}}</ion-card-subtitle>
       <ion-card-title>{{eventCard.name}}</ion-card-title>
