firebase storage set for images

--- a/src/app/event-manager/event-manager.page.html
+++ b/src/app/event-manager/event-manager.page.html
@@ -22,7 +22,7 @@
     </ion-item>
     <ion-button expand="block" color="secondary">
       <label  class="custom-file-upload">
-        <input id="native-file-chooser" type="file" (change)="fileChoose()"/>
+        <input id="native-file-chooser" type="file" (change)="fileChoose($event)"/>
         Kep feltoltese
       </label>
     </ion-button>
