--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,7 +8,7 @@
     </ion-tab-button>
 
 
-    <ion-tab-button tab="contact">
+    <ion-tab-button tab="ticket">
       <ion-icon name="ticket"></ion-icon>
       <ion-label>Jegyek</ion-label>
     </ion-tab-button>
