--- a/src/app/ticket/ticket.page.html
+++ b/src/app/ticket/ticket.page.html
@@ -3,10 +3,23 @@
       <ion-buttons slot="start" (click)="clickOnkBackButton()">
         <ion-icon name="caret-back-outline"></ion-icon>
       </ion-buttons>
-    <ion-title>Jegyek</ion-title>
+
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <p>tongyo vilag</p>
+  <ion-list>
+ <ion-item *ngFor="let ticket of ticketList">
+   <ion-thumbnail slot="start">
+     <img src="./thumbnail.svg">
+   </ion-thumbnail>
+   <ion-label>
+     <h3>Esemeny neve</h3>
+     <p>{{ticket.currentBid}}Ft, {{ticket.bidEndDate | showDate}}</p>
+   </ion-label>
+     <ion-button slot="end" fill="clear" size="large"><ion-icon name="arrow-forward-outline"></ion-icon>
+     </ion-button>
+
+ </ion-item>
+  </ion-list>
 </ion-content>
