--- a/src/app/ticket/ticket.page.html
+++ b/src/app/ticket/ticket.page.html
@@ -11,7 +11,7 @@
   <ion-list>
  <ion-item *ngFor="let ticket of ticketList">
    <ion-thumbnail slot="start">
-     <img src="./thumbnail.svg">
+     <img [src] ="getPicture(ticket.eventId)">
    </ion-thumbnail>
    <ion-label>
      <h3>Esemeny neve</h3>
