--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,26 +8,31 @@
 </ion-header>
 
 <ion-content>
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button (click)="openEventManager()">
-        <ion-icon name="add"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="openEventManager()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
   <ion-card *ngFor="let eventCard of eventList">
-    <ion-img [src]= 'eventCard.pictureURL'></ion-img>
+    <ion-img [src]='eventCard.pictureURL'></ion-img>
     <ion-card-header>
-      <ion-card-subtitle>{{eventCard.description}}</ion-card-subtitle>
-      <ion-card-title>{{eventCard.name}}</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
+      <ion-item lines="none">
+        <ion-card-subtitle>{{eventCard.description}}</ion-card-subtitle>
+      </ion-item>
+      <ion-item  lines="none">
+        <ion-card-title slot="start">{{eventCard.name}}
+        </ion-card-title>
+        <ion-icon slot="end" class="deleteEvents" id="deleteIcon" (click)="presentAlert(eventCard)" name="trash-outline"
+                  size="small"></ion-icon>
+      </ion-item>
 
-    </ion-card-content>
+    </ion-card-header>
     <ion-row>
       <ion-col>
-        <ion-button class="event-edit-button" size="small" fill="clear" (click) = "updateEvent(eventCard)">
+        <ion-button class="event-edit-button" size="small" fill="clear" (click)="updateEvent(eventCard)">
           <ion-icon name="create"></ion-icon>
-           Szerkesztes
+          Szerkesztes
         </ion-button>
       </ion-col>
     </ion-row>
