--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -13,9 +13,9 @@
       <ion-label>Jegyek</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="sell-ticket">
+    <ion-tab-button tab="licit">
       <ion-icon name="people"></ion-icon>
-      <ion-label>Eladas</ion-label>
+      <ion-label>Licit</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
