--- a/src/app/licit/licit.page.html
+++ b/src/app/licit/licit.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start" (click)="clickOnkBackButton()">
       <ion-icon name="caret-back-outline"></ion-icon>
     </ion-buttons>
-    <ion-title>Jegyeladas</ion-title>
+    <ion-title>Licit</ion-title>
   </ion-toolbar>
 </ion-header>
 
