--- a/src/app/ticket-manager/ticket-manager.page.html
+++ b/src/app/ticket-manager/ticket-manager.page.html
@@ -12,16 +12,23 @@
   <ion-list>
     <ion-item>
       <ion-label>Esemeny</ion-label>
-      <ion-select placeholder="Valassz egy esemenyt">
-        <ion-select-option  *ngFor=" let event of eventList">{{event.name}}</ion-select-option>
+      <ion-select [(ngModel)]="newEvent"placeholder="Valassz egy esemenyt">
+        <ion-select-option *ngFor=" let event of eventList">{{event.name}}</ion-select-option>
       </ion-select>
     </ion-item>
     <ion-item *ngFor="let inputItem of ticketKeyList">
       <ion-label>{{inputItem.label}}</ion-label>
-      <ion-input [(ngModel)]="newTicketModel[inputItem.key]"></ion-input>
-
+      <ion-input [(ngModel)]="newTicketModel[inputItem.key]" *ngIf="inputItem.key !=='bidEndDate'" type="number"></ion-input>
+      <ion-datetime *ngIf="inputItem.key == 'bidEndDate'"
+                    [(ngModel)]="newTicketModel[inputItem.key]"
+                    display-format="YYYY, MMM D, HH"
+                    picker-format="YYYY, MMM D, HH"
+                    value=""  min="2020" max="2099-10-31"></ion-datetime>
     </ion-item>
-    <ion-button  *ngFor="let event of eventList" expand="block" color="primary" (click)="onSubmit(event)">Frissites
+  </ion-list>
+  <ion-list *ngFor=" let event of eventList">
+    <ion-button *ngIf="event.name == newEvent" expand="block" color="primary"
+                (click)="onSubmit(event)" multiple="true" size="large">Mentes
     </ion-button>
   </ion-list>
 </ion-content>
