--- a/src/app/licit/licit.page.scss
+++ b/src/app/licit/licit.page.scss
@@ -1,6 +1,31 @@
+
 .item-interactive-disabled.sc-ion-label-md-h:not(.item-multiple-inputs), .item-interactive-disabled:not(.item-multiple-inputs) .sc-ion-label-md-h {
   cursor: default;
   opacity: 1;
   pointer-events: none;
-  color: #3a7be0;
 }
+
+#ion-sel-0-lbl {
+
+}
+
+#inputId {
+  display: none;
+}
+
+.sc-ion-input-md-h {
+  display: inline-block;
+  top: 30%;
+  right: 15px;
+}
+
+.sc-ion-input-md-h.sc-ion-input-md-s.md.hydrated,
+.sc-ion-input-ios-h{
+  text-align: end;
+}
+
+.item-interactive-disabled.sc-ion-label-ios-h:not(.item-multiple-inputs),
+.item-interactive-disabled:not(.item-multiple-inputs) .sc-ion-label-ios-h {
+  opacity: 1;
+}
+
